@@ -1758,6 +1758,26 @@ expr_stmt|;
 block|}
 name|out
 operator|.
+name|print
+argument_list|(
+literal|" matcher=\""
+operator|+
+name|includes
+index|[
+name|j
+index|]
+operator|.
+name|getMatcher
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
 name|println
 argument_list|(
 literal|"/>"
@@ -2039,6 +2059,26 @@ expr_stmt|;
 block|}
 name|out
 operator|.
+name|print
+argument_list|(
+literal|" matcher=\""
+operator|+
+name|excludes
+index|[
+name|j
+index|]
+operator|.
+name|getMatcher
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
 name|println
 argument_list|(
 literal|"/>"
@@ -2078,6 +2118,281 @@ operator|.
 name|println
 argument_list|(
 literal|"\t\t</dependency>"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|ExcludeRule
+index|[]
+name|excludes
+init|=
+name|md
+operator|.
+name|getAllExcludeRules
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|excludes
+operator|.
+name|length
+operator|>
+literal|0
+condition|)
+block|{
+for|for
+control|(
+name|int
+name|j
+init|=
+literal|0
+init|;
+name|j
+operator|<
+name|excludes
+operator|.
+name|length
+condition|;
+name|j
+operator|++
+control|)
+block|{
+name|out
+operator|.
+name|print
+argument_list|(
+literal|"\t\t<exclude"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|print
+argument_list|(
+literal|" org=\""
+operator|+
+name|excludes
+index|[
+name|j
+index|]
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getModuleId
+argument_list|()
+operator|.
+name|getOrganisation
+argument_list|()
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|print
+argument_list|(
+literal|" module=\""
+operator|+
+name|excludes
+index|[
+name|j
+index|]
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getModuleId
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|print
+argument_list|(
+literal|" artifact=\""
+operator|+
+name|excludes
+index|[
+name|j
+index|]
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|print
+argument_list|(
+literal|" type=\""
+operator|+
+name|excludes
+index|[
+name|j
+index|]
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getType
+argument_list|()
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|print
+argument_list|(
+literal|" ext=\""
+operator|+
+name|excludes
+index|[
+name|j
+index|]
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getExt
+argument_list|()
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
+name|String
+index|[]
+name|ruleConfs
+init|=
+name|excludes
+index|[
+name|j
+index|]
+operator|.
+name|getConfigurations
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|ruleConfs
+argument_list|)
+operator|.
+name|equals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|md
+operator|.
+name|getConfigurationsNames
+argument_list|()
+argument_list|)
+argument_list|)
+condition|)
+block|{
+name|out
+operator|.
+name|print
+argument_list|(
+literal|" conf=\""
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|k
+init|=
+literal|0
+init|;
+name|k
+operator|<
+name|ruleConfs
+operator|.
+name|length
+condition|;
+name|k
+operator|++
+control|)
+block|{
+name|out
+operator|.
+name|print
+argument_list|(
+name|ruleConfs
+index|[
+name|k
+index|]
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|k
+operator|+
+literal|1
+operator|<
+name|ruleConfs
+operator|.
+name|length
+condition|)
+block|{
+name|out
+operator|.
+name|print
+argument_list|(
+literal|","
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|out
+operator|.
+name|print
+argument_list|(
+literal|"\""
+argument_list|)
+expr_stmt|;
+block|}
+name|out
+operator|.
+name|print
+argument_list|(
+literal|" matcher=\""
+operator|+
+name|excludes
+index|[
+name|j
+index|]
+operator|.
+name|getMatcher
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"/>"
 argument_list|)
 expr_stmt|;
 block|}
